<resources>
    <string name="app_name">Sendia</string>
    <string name="first_time_login">
        I noticed this is your first time to Login into this app.
        please go to setting and update your profile before you continue
    </string>

    <!--    Fragment tags-->
    <string name="Home_fragment">Home</string>
    <string name="Login_fragment">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_messages">No messages to Show</string>
    <string name="back_arrow">back Arrow</string>
    <string name="user_name">Profile</string>
    <string name="image">image</string>
    <string name="name">Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="interested_in">Interested In:</string>
    <string name="status">Status:</string>
    <string name="looking">Looking</string>
    <string name="fragment_connections">Connections</string>
    <string name="fragment_profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="no_connections">No Connections</string>
    <string name="allez_san">Allez San</string>
    <string name="female">females</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background">Background</string>
    <string name="send">Send</string>
    <string name="new_message">new message...</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="nav_header_desc">dp</string>
    <string name="nav_header_title">name</string>
    <string name="nav_header_subtitle">email</string>
    <string name="phone_hint">phone number</string>
    <string name="name_">Name:</string>
    <string name="email">email</string>
</resources>