<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home_fragment" />
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/fragment_profile" />


    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
    </group>




</menu>