<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar">


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/back_arrow"
            >

            <ImageView
                android:id="@+id/image_back_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_back_arrow"
                android:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_heading"
            android:textColor="@color/White"
            android:text="@string/user_name"
            android:layout_toRightOf="@+id/back_arrow"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/back_arrow" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:alpha=".1"
            android:id="@+id/background"
            android:contentDescription="@string/image" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:id="@+id/parent_view">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- Top Half of Layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    android:id="@+id/my_profile_image"
                    android:layout_centerInParent="true"
                    />


            </RelativeLayout>


            <!-- Bottom Half of Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:id="@+id/name"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:text="@string/allez_san"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:textColor="@color/Black"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:id="@+id/text_gender"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/gender"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"
                            android:layout_toRightOf="@+id/text_gender"
                            android:layout_toEndOf="@+id/text_gender" />

                    </RelativeLayout>

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/interested_in"
                            android:id="@+id/text_interested_in"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:id="@+id/interested_in"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"
                            android:layout_toRightOf="@+id/text_interested_in"
                            android:layout_toEndOf="@+id/text_interested_in" />

                    </RelativeLayout>

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:id="@+id/text_status"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/looking"
                            android:id="@+id/status"
                            android:textSize="20sp"
                            android:textColor="@color/Black"
                            android:layout_gravity="center_vertical"
                            android:layout_toRightOf="@+id/text_status"
                            android:layout_toEndOf="@+id/text_status" />

                    </RelativeLayout>

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
