<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:id="@+id/toolbar">


        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/back_arrow">

            <ImageView
                android:id="@+id/image_back_arrow"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_back_arrow" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/back_arrow"
            android:gravity="center_vertical"
            android:id="@+id/relLayoutTop"
            android:layout_toEndOf="@+id/back_arrow">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/profile_image"
                android:src="@drawable/ic_launcher_background"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_heading"
                android:textColor="@color/White"
                android:layout_toRightOf="@+id/profile_image"
                android:textSize="16sp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/allez_san"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profile_image" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="matrix"
            android:alpha=".1"
            android:id="@+id/background"
            android:contentDescription="@string/background" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relLayout1"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        tools:listitem="@layout/rv_chat_item">


    </androidx.recyclerview.widget.RecyclerView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/grey_border_top"
        android:id="@+id/relLayout1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/post_message"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:text="@string/send"
            android:gravity="center"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input_message"
            android:background="@null"
            android:layout_toLeftOf="@+id/post_message"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:hint="@string/new_message"
            android:textColor="@color/Black"
            android:layout_marginLeft="5dp"
            android:layout_toStartOf="@+id/post_message"
            android:layout_marginStart="5dp" />


    </RelativeLayout>

</RelativeLayout>








